syntax = "proto3";

package gtms.user_operations.v1;

message UserOperations {
  repeated UserOperation user_operations = 1;
}

message UserOperation {
  string user_op_hash = 1;
  string sender = 2;
  string paymaster = 3;
  string nonce = 4;
  bool success = 5;
  string actual_gas_cost = 6;
  string actual_gas_used = 7;
  BlockInfo block_info = 9;
  TransactionInfo transaction_info = 10;
  UserOperationInput user_op_input = 11;
  uint64 log_ordinal = 12;
}

message UserOperationRevert {
  bytes user_op_hash = 1;
  bytes revert_reason = 2;
}

message BlockInfo {
  int64 block_time = 1;
  uint64 block_number = 2;
}

message TransactionInfo {
  string transaction_hash = 1;
  int32 transaction_status = 2;
}

message UserOperationInput {
  string sender = 1;
  string nonce = 2;
  string init_code = 3;
  string call_data = 4;
  string call_gas_limit = 5;
  string verification_gas_limit = 6;
  string pre_verification_gas = 7;
  string max_fee_per_gas = 8;
  string max_priorit_fee_per_gas = 9;
  string paymaster_and_data = 10;
  string signature = 11;
  string beneficiary = 12;
  DecodedCallData decoded_call_data = 13;
} 

message DecodedCallData {
  repeated string targets = 1;
  repeated string call_datas = 2;
  repeated string values = 3;
}